fix overlapping carousel

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,10 @@ main {
 }
 
 
-
+.slick-slide img {
+  display: block;
+  width: 100%;
+}
 
 
 
